objects/TenantEntitlementTransaction__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>KQ_id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>businessenvtype__c</fullName>
        <label>Business Environment Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <label>Created By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>enddate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>entitlementcarddefdevlname__c</fullName>
        <label>Entitlement Card Definition Dev Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entitlementtransactionsubtype__c</fullName>
        <label>Transaction Subtype</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entitlementtransactiontype__c</fullName>
        <label>Transaction Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdeleted__c</fullName>
        <label>Deleted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mgmtorgcontract__c</fullName>
        <label>Management Org Contract</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mgmtorgentitlementschedule__c</fullName>
        <label>Management Org Entitlement Schedule</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rawquantity__c</fullName>
        <label>Raw Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>relatedtntentitlementtrxnid__c</fullName>
        <label>Related Entitlement Transaction</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startdate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>systemmodstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>Unit</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usagemodel__c</fullName>
        <label>Usage Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype0__c</fullName>
        <label>Usage Subtype 0</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype1__c</fullName>
        <label>Usage Subtype 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype2__c</fullName>
        <label>Usage Subtype 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagetypedef__c</fullName>
        <label>Usage Type Definition</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>